infrastructures/echoserver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echoserver
  labels:
    app.kubernetes.io/name: echoserver
    app.kubernetes.io/component: namespace
