infrastructures/echoserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: echoserver
  labels:
    app.kubernetes.io/name: echoserver
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: echoserver
