infrastructures/echoserver/httproute-ip.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver-ip
  namespace: echoserver
  labels:
    app.kubernetes.io/name: echoserver
    app.kubernetes.io/component: route-ip
spec:
  parentRefs:
  - name: default-gateway
    namespace: envoy-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echoserver
      port: 80
