infrastructures/echoserver/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver
  namespace: echoserver
  labels:
    app.kubernetes.io/name: echoserver
    app.kubernetes.io/component: route
spec:
  parentRefs:
  - name: default-gateway
    namespace: envoy-gateway
  hostnames:
  - "echo.homelab.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: echoserver
      port: 80
